<resources>
    <string name="app_name">Lista de Tarefas</string>
    <string name="app_login">Login</string>
    <string name="app_enter">Entrar</string>
    <string name="app_register">Não possui cadastro?</string>
    <string name="app_logout">Logout</string>
    <string name="register">Cadastrar</string>
    <string name="back">Voltar</string>
    <string name="app_change_password">Alterar Senha</string>
    <string name="app_forget_password">Esqueceu a Senha?</string>
    <string name="btn_select_date">Data</string>
    <string name="btn_select_hour">Hora</string>
    <string name="save_task">Salvar</string>
    <string name="lista_de_tarefas">Lista de tarefas</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="password">Senha</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="or">ou</string>
    <string name="atualizar_perfil">Atualizar Perfil</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="registrar">Registrar</string>
    <string name="entrar_com_google">Entrar com Google</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="registrar_com_google">Registrar com Google</string>
    <string name="recuperar">Recuperar</string>
    <string name="sem_senha">Sem senha</string>
    <string name="senha_muito_fraca">Muito Fraca</string>
    <string name="senha_fraca">Fraca</string>
    <string name="senha_media">Média</string>
    <string name="senha_forte">Forte</string>
    <string name="senha_muito_forte">Muito Forte</string>
    <string name="task_title_field">Título</string>
    <string name="task_description_field">Descrição</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="invalid">Inválido</string>


</resources>